# InheritanceProject

./: CMakeLists.txt  Commission.cpp  Commission.h  Employee.cpp  Employee.h  Executive.cpp  Executive.h  Firm.cpp  Hourly.cpp  Hourly.h  StaffMember.cpp  StaffMember.h  Volunteer.cpp  Volunteer.h
